<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.exq.triplog</groupId>
    <artifactId>triplog</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>triplog-client</module>
        <module>triplog-server</module>
        <module>triplog-tools</module>
        <module>triplog-ear</module>
        <module>triplog-client-dispatcher</module>
    </modules>

    <packaging>pom</packaging>

    <name>Triplog</name>

    <contributors>
        <contributor>
            <name>Nicolas Oeschger</name>
            <email>noe+triplog@exq.ch</email>
        </contributor>
    </contributors>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>

                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.8</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>